[gd_scene load_steps=12 format=3 uid="uid://br48rlcsb0m14"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_b55x7"]
[ext_resource type="Script" path="res://Scripts/InteractRay.gd" id="2_kf4ur"]
[ext_resource type="Script" path="res://Scripts/PlayerBlink.gd" id="2_smyuk"]
[ext_resource type="Script" path="res://Scripts/PlayerClimb.gd" id="3_8hqfu"]
[ext_resource type="Script" path="res://Scripts/reticle.gd" id="5_7720b"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yaujt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v5jvc"]
shading_mode = 0
disable_receive_shadows = true
shadow_to_opacity = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8jtir"]

[sub_resource type="PrismMesh" id="PrismMesh_erue5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eidtk"]
albedo_color = Color(1, 0.815686, 0, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.18
rim_enabled = true

[sub_resource type="SphereMesh" id="SphereMesh_6abf6"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_b55x7")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 1.64589, 2.08165e-12)
fov = 50.0

[node name="RayCast3D" type="RayCast3D" parent="PlayerCamera"]
transform = Transform3D(1, -3.48787e-16, 0, 3.48787e-16, 1, -3.48787e-16, 0, 3.48787e-16, 1, 0.00443482, 0.00528073, 0.00586128)
visible = false
target_position = Vector3(2.08165e-12, 2.08165e-12, -20)

[node name="InteractRay" type="RayCast3D" parent="PlayerCamera"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(2.08165e-12, 2.08165e-12, -3)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1
script = ExtResource("2_kf4ur")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1, 2.08165e-12)
mesh = SubResource("CapsuleMesh_yaujt")
surface_material_override/0 = SubResource("StandardMaterial3D_v5jvc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1, 2.08165e-12)
shape = SubResource("CapsuleShape3D_8jtir")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 1.5, 2.08165e-12)

[node name="BlinkIconMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 2.08165e-12, 0.1, 2.08165e-12)
cast_shadow = 0
mesh = SubResource("PrismMesh_erue5")
surface_material_override/0 = SubResource("StandardMaterial3D_eidtk")

[node name="ChestRay" type="RayCast3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 0.958121, 2.08165e-12)
target_position = Vector3(2.08165e-12, 2.08165e-12, 0.75)
debug_shape_custom_color = Color(0.86, 0.82259, 0.1118, 1)
debug_shape_thickness = 1

[node name="LedgeRayForward" type="RayCast3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 0.958121, 2.08165e-12)
target_position = Vector3(2.08165e-12, 2.08165e-12, 3)
debug_shape_custom_color = Color(0.86, 0.82259, 0.1118, 1)
debug_shape_thickness = 1

[node name="HeadRay" type="RayCast3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 0.000376701, 1.90887, -0.0037421)
target_position = Vector3(2.08165e-12, 2.08165e-12, 1.75)
debug_shape_custom_color = Color(0.86, 0.82259, 0.1118, 1)
debug_shape_thickness = 1

[node name="PlayerBlink" type="Node" parent="."]
script = ExtResource("2_smyuk")

[node name="PlayerClimb" type="Node" parent="."]
script = ExtResource("3_8hqfu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Node3D" type="Node3D" parent="."]

[node name="LedgeRayDown" type="RayCast3D" parent="Node3D"]
target_position = Vector3(2.08165e-12, -2.15, 2.08165e-12)
hit_from_inside = true
debug_shape_thickness = 5

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/LedgeRayDown"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("SphereMesh_6abf6")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Reticle" type="CenterContainer" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_7720b")
